--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_worst_tip">#DC1E0B</color>>
-    <color name="color_best_tip">#35BA01</color>>
+    <color name="color_worst_tip">#DC1E0B</color>
+    <color name="color_best_tip">#35BA01</color>
+    <color name="orange_1">#F7A536</color>
+    <color name="orange_2">#D6772F</color>
+
 </resources>
